# wax-address-validation

./: LICENSE  README.md
contract/: .gitignore  CMakeLists.txt  build.sh
contract/dcbawaxvalid/: CMakeLists.txt  dcbawaxvalid.contracts.md  dcbawaxvalid.cpp  dcbawaxvalid.hpp  valids.hpp
contract/scripts/: build_debug.sh  helper.sh  run_units.sh
contract/tests/: CMakeLists.txt  contracts.hpp.in  dcbawaxvalid_tests.cpp  main.cpp
demo/: .gitignore  example.env  index.js  package-lock.json  package.json  tailwind.config.js
demo/public/: index.html
demo/src/: App.js
demo/src/components/: InputItem.js  Layout.js  LoginForm.js  MainButton.js  RegisterForm.js  Title.js
demo/src/pages/: ConfirmationPage.js  HomePage.js  ValidationPage.js
